# HybridStyleNet

./: .gitignore  HybridStyleNet_tesi_ottimizzata.md  RAG_ColorNet_Architecture.md  main.py  ottimizzazioni.txt  pyproject.toml  raw_manager.ipynb  tesi_color_grading_completo.md  text.txt
notebooks/: 00_pretrain.py  03_fase3_adapt.ipynb  03_fase3_adapt.py  raw_pipeline.ipynb  swin_notebook.ipynb  swin_pretrained_rope_v3.ipynb  test_rag_colornet.ipynb  test_rag_colornet.py
src/: infer.py  requirements.txt  setup.py  train.py
src/configs/: adapt.yaml  base.yaml  default.yaml  meta_train.yaml  meta_training.yaml  photographer.yaml  pretraining.yaml
src/data/: __init__.py  augmentation.py  augmentations.py  dataset.py  datasets.py  photographer_dataset.py  raw_pipeline.py  task_sampler.py  utils.py
src/evaluation/: __init__.py  ablation.py  ablation_runner.py  benchmark.py  metrics.py
src/inference/: __init__.py  batch_grade.py  grade.py  infer.py  trt_export.py
src/losses/: __init__.py  chroma.py  color_losses.py  composite.py  composite_loss.py  delta_e.py  entropy.py  histogram.py  identity.py  l1_lab.py  luminance.py  perceptual.py  retrieval_loss.py  structural_losses.py  tv.py
src/memory/: __init__.py  database.py  faiss_index.py  incremental_update.py
src/models/: __init__.py  adain.py  bilateral_grid.py  cluster_net.py  confidence_mask.py  cross_attention.py  encoder.py  hybrid_style_net.py  rag_colornet.py  retrieval_module.py  scene_encoder.py  set_transformer.py  swin.py
src/training/: __init__.py  adapt.py  early_stopping.py  lr_scheduler.py  (+5 more)
(+8 files in other folders)
